--- a/05-loop_prediction.Rmd
+++ b/05-loop_prediction.Rmd
@@ -1,3 +1,3 @@
-# Prediction of chromatin looping interactions {#ch:loop_prediction}
+# Prediction of chromatin looping interactions {#loop-prediction}
 
 This chapter has to be added.
