--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ classoption: [
   captions=tableabove, 
   draft=false]
 papersize: a4
-bibliography: [bib/book.bib, bib/packages.bib, bib/PhD.bib]
+bibliography: [bib/PhD.bib]
 biblio-style: unsrtnat
 csl: cell.csl
 link-citations: yes
@@ -42,29 +42,11 @@ knitr::opts_chunk$set(echo = FALSE)
 <!-- - Computational appraoch for using interaction and TADs to interpret variants -->
 <!-- - To improve analysis of genome folding in diverse conditions, we develped 7C. -->
 
-The DNA of the human genome has a total length of 2 meters but is folded to fit 
-in each cell's nucleus with a size of around 10 nm.
-Chromosome conformation capture experiments coupled with high-throughput sequencing (Hi-C)
-allow to measure DNA-DNA contacts genome-wide and reviled a highly organized hierarchy of three-dimensional genome organization. Chromosomes fold locally into domains of 
-several kb termed topologically associating domains (TADs) which restrict the interactions
-of gene regulatory regions, such as enhancers, and target genes. 
+<!-- Chromosome conformation capture experiments coupled with high-throughput sequencing (Hi-C) allow to measure DNA-DNA contacts genome-wide and reviled a highly organized hierarchy of three-dimensional genome organization. -->
 
-In this theses, diverse genomic datasets are computationally integrated with genome-wide chromatin interaction maps to analyze the function of TADs for gene regulation during evolution and in disease genomes. 
+The DNA of the human genome has a total length of 2 meters and fits into a 10 nm nucleus. Hi-C experiments probe the three-dimensional genome architecture by genome-wide DNA-DNA contact maps. In these maps, interphase chromosomes fold locally into regions of several hundred kb, called topologically associating domains (TADs). TADs can restrict the interactions of genes with distal regulatory sequences, such as enhancers, and might, therefore, represent important functional units of genomes.
 
-More specifically, I show that duplicated gene pairs are enriched for colocalization in the same TAD, share more often common enhancer elements than expected and have increased contact frequencies over large genomic distances. The clustering in the three-dimensional genome architecture enables concerted expression over diverse cell-types and indicate evolutionary constraints in functional genome organization. 
-Indeed, by analyzing evolutionary rearrangements between human and diverse mammal species, I show that TADs are highly conserved building blocks of genomes across millions of years of evolution and that rearrangements of TADs is associated to changes in gene expression.
+In this thesis, I integrate genome-wide chromatin interaction maps with diverse genomic datasets to analyze the function of TADs for gene regulation during evolution and in disease genomes. More specifically, I show that duplicated gene pairs are enriched for colocalization in the same TAD, share more often common enhancer elements than expected and have increased contact frequencies over large genomic distances. The clustering of functionally related genes within TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization. Indeed, by analyzing evolutionary rearrangements between human and diverse mammal species, I show that TADs are highly conserved building blocks of genomes across millions of years of evolution. While TADs seems to conserve gene expression profiles between mouse and human, genes in rearranged TADs show divergent expression. Next, I analyze disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. While the phenotypes cannot be explained by variants in protein-coding sequences, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes. This effect mechanism leads to altered gene expression in patient-derived cell lines. Finally, I present a computational tool, 7C, to predict long-range chromatin interactions by largely available ChIP-seq data. This enables the analysis of three-dimensional genome folding in many diverse tissues and conditions.
 
-Furthermore, we asked whether disruption of TADs can also lead to genetic disease. By analyzing balanced chromosomal rearrangements in whole-genome sequenced patients with diverse genetic syndromes, we can associate the effect mechanism of rearrangements to disruption of TAD that leads to altered gene expression of phenotypically relevant genes. 
-
-Finally, I present a computational tool, 7C, to predict long-range chromatin interactions by largely available ChIP-seq data. This enables the analysis of genome folding in many diverse tissues and conditions. 
-
-Together, these results show that TADs are important structural and functional units of genomes and TAD disruption is associated altered gene regulation during evolution and in disease. 
-Therefore, it will be increasingly important to take the three-dimensional folding structure
- of genomes into account to interpret genomic variations in genetic disease and cancer genomes to ultimately improve genetic diagnoses in clinical practice and treatment development.
- 
-
-
-
-
-
+Together, these results show that TAD disruption is associated with altered gene regulation during evolution and in diseases. TADs are not only structural units of genomes but also important functional building blocks and represent regulatory environments for genes.  Therefore, it will be increasingly important to take the three-dimensional genome structure into account, not only in genomic research but also in clinical practice.
 
